// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskContainerComponent DOM should render tasks$ 1`] = `
<div
  id="root3"
>
  <mat-card
    class="mat-card mat-focus-indicator"
  >
    <app-task-presenter>
      <p>
        
      </p>
    </app-task-presenter>
    <app-task-presenter>
      <p>
        
      </p>
    </app-task-presenter>
    <app-task-presenter>
      <p>
        
      </p>
    </app-task-presenter>
    
  </mat-card>
  <mat-card
    class="mat-card mat-focus-indicator"
  >
    <mat-card-title
      class="mat-card-title"
    >
       Total: 00:01 
    </mat-card-title>
  </mat-card>
</div>
`;

exports[`TaskContainerComponent DOM should render totalTime$ 1`] = `
<div
  id="root2"
>
  <mat-card
    class="mat-card mat-focus-indicator"
  >
    
  </mat-card>
  <mat-card
    class="mat-card mat-focus-indicator"
  >
    <mat-card-title
      class="mat-card-title"
    >
       Total: 00:35 
    </mat-card-title>
  </mat-card>
</div>
`;
